<resources>
    <string name="app_name">Social Hub</string>
    <string name="login_view_title">Login</string>
    <string name="login_edit_text_email_hint">E-mail</string>
    <string name="login_edit_text_password_hint">Password</string>
    <string name="login_check_box_lembrar">Remember-me next time</string>
    <string name="login_button_entrar">Get into</string>
    <string name="login_nao_temconta">Don\'t have an account?</string>
    <string name="login_criar_conta">Create account</string>
    <string name="login_error_email_obrigatorio">E-mail needed</string>
    <string name="login_error_password_obrigatorio">Password needed</string>
    <string name="login_error_usuario_incorreto">User or password incorrect</string>
    <string name="novo_usuario_opcao_osuario_buttom">I would like to help a ONG</string>
    <string name="novo_usuario_opcao_ong_buttom">We are ONG, looking for help</string>
    <string name="novo_usuario_titulo">Choose an profile option</string>
    <string name="perfil_usuario_titulo">User profile</string>
    <string name="perfil_ong_titulo">ONG profile</string>
    <string name="social">Social</string>
    <string name="hub">Hub</string>
    <string name="criar_conta_mater_logado">Keep me logged in</string>
    <string name="confirmar_senha_escolhida">Confirm choosen password</string>
    <string name="obrigatorio_senha_nova">Provide your new passord</string>
    <string name="obrigatorio_confirmar_senha_nova">Retype your choose neu password</string>
    <string name="senha_escolhida_divergente_confirmacao">Choosen password doesn\'t match confirmation</string>
    <string name="criar_usuario_senha_fraca">Password length week</string>
    <string name="criar_usuario_ja_existe">User already exists with this email</string>
    <string name="criar_usuario_email_incorreto">Wrong email</string>
    <string name="autenticar_usuario_nao_existe">User doesn\'t exists</string>

    <string name="ong_profile_falta_organization">Organization name should be informed</string>
    <string name="ong_profile_falta_fone">Phone name should be informed</string>
    <string name="ong_profile_falta_cep">CEP should be informed</string>
    <string name="ong_profile_falta_responsible_name">Responsible name should be informed</string>
    <string name="ong_profile_falta_responsible_cpf">Responsible CPF should be informed</string>
    <string name="ong_profile_falta_responsible_email">Responsible e-mail should be informed</string>
    <!-- ong registration screen text -->

    <string name="ong_profile_text_view_organization_hint">Organization</string>
    <string name="ong_profile_edit_text_organization_name_hint">Organization Name</string>
    <string name="ong_profile_edit_text_email_hint">E-mail</string>
    <string name="ong_profile_edit_text_phone_number_hint">Phone Number</string>
    <string name="ong_profile_text_view_address_hint">Address</string>
    <string name="ong_profile_edit_text_cep_hint">CEP</string>
    <string name="ong_profile_edit_text_public_place_hint">Public Place</string>
    <string name="ong_profile_edit_text_number_hint">Number</string>
    <string name="ong_profile_edit_text_complement_hint">Complement</string>
    <string name="ong_profile_edit_text_district_hint">District</string>
    <string name="ong_profile_edit_text_city_hint">City</string>
    <string name="ong_profile_edit_text_state_hint">State</string>
    <string name="img_ong_wave_500_top">img_ong_wave_500_top</string>
    <string name="ong_profile_edit_text_sector_hint">Sector</string>
    <string name="ong_profile_text_view_responsible_hint">Responsible</string>
    <string name="ong_profile_text_view_safety_hint">Safety</string>
    <string name="ong_profile_edit_text_name_hint">Name</string>
    <string name="ong_profile_edit_text_cpf_hint">CPF</string>
    <string name="ong_profile_edit_text_cnpj_hint">CNPJ</string>
    <string name="ong_profile_edit_text_password_hint">Password</string>
    <string name="ong_profile_edit_text_repeat_password_hint">Repeat Password</string>
    <string name="ong_profile_text_view_accept_message_hint">
By creating an account you agree to Social Hub\'s terms of use and privacy policy.</string>
    <string name="ong_profile_img_eye_password">Eye Password</string>
    <string name="ong_profile_msg_change_image">Change Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <!-- tela de post-->
    <string name="i_will_help">I wil help!</string>
    <string name="home">Home</string>
    <string name="feed">Feed</string>
    <string name="describe_the_goal">Describe the goal</string>
    <string name="describe_the_help">Describe the help</string>
</resources>