<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NovaOngActivity" >

    <ImageView
        android:id="@+id/novo_usuario_iv_top"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:contentDescription="@string/img_ong_wave_500_top"
        android:rotation="180"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_ong_wave_500" />

    <TextView
        android:id="@+id/tv_opcao_usuario_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/novo_usuario_iv_top"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:text="@string/perfil_ong_titulo"
        android:textColor="@color/ong_500"
        android:textSize="48sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scroll_ong_account_registration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_opcao_usuario_title"
        >

        <LinearLayout
            android:id="@+id/linear_layout_ong_account_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/ong_profile_edit_text_organization_hint"
                android:textColor="@color/ong_500"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/register_edit_text_organization_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/person_24"
                android:drawablePadding="16dp"
                android:drawableTint="@color/ong_500"
                android:hint="@string/ong_profile_edit_text_organization_name_hint"
                />

            <EditText
                android:id="@+id/register_edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email_24"
                android:drawablePadding="16dp"
                android:drawableTint="@color/ong_500"
                android:hint="@string/ong_profile_edit_text_email_hint" />


            <EditText
                android:id="@+id/register_edit_text_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/outline_call_24"
                android:drawablePadding="16dp"
                android:drawableTint="@color/ong_500"
                android:hint="@string/ong_profile_edit_text_phone_number_hint" />

            <EditText
                android:id="@+id/register_edit_text_sector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableTint="@color/ong_500"
                android:hint="@string/ong_profile_edit_text_sector_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/ong_profile_edit_text_address_hint"
                android:textColor="@color/ong_500"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/register_edit_text_cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_place_24"
                android:drawablePadding="16dp"
                android:drawableTint="@color/ong_500"
                android:hint="@string/ong_profile_edit_text_cep_hint" />

            <EditText
                android:id="@+id/register_edit_text_public_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_place_24"
                android:drawablePadding="16dp"
                android:drawableTint="@color/ong_500"
                android:hint="@string/ong_profile_edit_text_public_place_hint" />

            <EditText
                android:id="@+id/register_edit_text_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_place_24"
                android:drawablePadding="16dp"
                android:drawableTint="@color/ong_500"
                android:hint="@string/ong_profile_edit_text_number_hint" />

            <EditText
                android:id="@+id/register_edit_complement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_place_24"
                android:drawablePadding="16dp"
                android:drawableTint="@color/ong_500"
                android:hint="@string/ong_profile_edit_text_complement_hint" />

            <EditText
                android:id="@+id/register_edit_text_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_place_24"
                android:drawablePadding="16dp"
                android:drawableTint="@color/ong_500"
                android:hint="@string/ong_profile_edit_text_district_hint" />

            <Button
                android:id="@+id/criar_conta_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/ong_500"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/login_criar_conta" />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>