<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <ImageView
        android:id="@+id/login_iv_top"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:rotation="180"
        android:scaleType="fitXY"
        android:src="@drawable/ic_ong_wave_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/login_linear_layout_criar_conta"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/login_iv_top"
        app:layout_constraintBottom_toTopOf="@id/login_iv_bottom"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp">

        <TextView
            android:id="@+id/login_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_view_title"
            android:textSize="48sp"
            android:textStyle="bold"
            android:layout_marginBottom="48dp"
            android:textColor="@color/people_700"/>

        <EditText
            android:id="@+id/login_edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_edit_text_email_hint"
            android:layout_marginBottom="24dp"
            android:drawableStart="@drawable/email_24"
            android:drawablePadding="16dp"
            android:drawableTint="@color/people_200"/>

        <EditText
            android:id="@+id/login_edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock_24"
            android:drawablePadding="16dp"
            android:drawableTint="@color/people_200"
            android:hint="@string/login_edit_text_password_hint"
            android:password="true" />

        <CheckBox
            android:id="@+id/login_check_box_lembrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_check_box_lembrar"
            android:layout_gravity="end"/>

        <Button
            android:id="@+id/login_button_entrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/login_button_entrar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_nao_temconta"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/login_text_view_criar_conta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_criar_conta"
                android:textColor="@color/people_500"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/login_iv_bottom"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/ic_ong_wave_500"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>