<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NovoUsuarioActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layoyt_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_opcao_usuario_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/perfil_usuario_titulo"
                android:textColor="@color/people_700"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/login_edit_text_email"
                android:layout_width="375dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:drawableStart="@drawable/email_24"
                android:drawablePadding="16dp"
                android:drawableTint="@color/people_700"
                android:hint="@string/login_edit_text_email_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_opcao_usuario_title" />

            <EditText
                android:id="@+id/login_edit_text_password"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/lock_24"
                android:drawablePadding="16dp"
                android:drawableTint="@color/people_700"
                android:hint="@string/login_edit_text_password_hint"
                android:inputType="textPassword"
                android:textFontWeight="4"
                app:layout_constraintEnd_toStartOf="@+id/img_eye_show_new_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_edit_text_email" />

            <ImageButton
                android:id="@+id/img_eye_show_new_password"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignEnd="@id/login_edit_text_password"
                android:background="#00FFFFFF"
                android:src="@drawable/ic_eye_24"
                android:textFontWeight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/login_edit_text_password"
                app:layout_constraintTop_toTopOf="@+id/login_edit_text_password" />

            <EditText
                android:id="@+id/login_edit_text_password_confirm"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/lock_24"
                android:drawablePadding="16dp"
                android:drawableTint="@color/people_700"
                android:hint="@string/confirmar_senha_escolhida"
                android:inputType="textPassword"
                android:textFontWeight="4"
                app:layout_constraintEnd_toStartOf="@+id/img_eye_show_confirm_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_edit_text_password" />

            <ImageButton
                android:id="@+id/img_eye_show_confirm_password"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignEnd="@id/login_edit_text_password_confirm"
                android:background="#00FFFFFF"
                android:src="@drawable/ic_eye_24"
                android:textFontWeight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toEndOf="@+id/login_edit_text_password_confirm"
                app:layout_constraintTop_toTopOf="@+id/login_edit_text_password_confirm" />

            <CheckBox
                android:id="@+id/login_check_box_lembrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/criar_conta_mater_logado"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_edit_text_password_confirm" />

            <Button
                android:id="@+id/criar_conta_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/people_500"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/login_criar_conta"
                app:layout_constraintTop_toBottomOf="@+id/login_check_box_lembrar" />

            <TextView
                android:id="@+id/text_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Ou"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/criar_conta_button" />


            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_or" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                android:text="Ong"
                app:layout_constraintBottom_toTopOf="@+id/criar_conta_button"
                app:layout_constraintEnd_toStartOf="@+id/login_check_box_lembrar"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_edit_text_password_confirm" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>